# hxckr-infra

./: .env.example  .gitignore  README.md  devbox.json  flake.nix
.github/workflows/: docker-publish.yml
git-service/: Cargo.toml  Dockerfile  README.md  SETUP.md
git-service/src/: main.rs
git-service/src/softserve/: actions.rs  config.rs  errors.rs  handlers.rs  mod.rs  models.rs  ssh.rs  tracing.rs
