[package]
name = "git-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
ssh2 = "0.9.4"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-actix-web = "0.7.12"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
